Add admin ability to register artifact details
Signed-off-by: Gabriel Harris-Rouquette <gabizou@me.com>